--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -8,10 +8,10 @@ server {
 
     location / {
         try_files $uri /index.php$is_args$args;
+        # return 301 https://$host$request_uri;
     }
 
     location ~ ^/(index)\.php(/|$) {
-        #fastcgi_pass php:9000;
         fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
 
@@ -34,35 +34,57 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
+
     server_name nginx_host;
-    root var/www/deep-space-objects/public;
 
-    ssl_certificate /etc/nginx/ssl/localhost.crt;
-    ssl_certificate_key /etc/nginx/ssl/localhost.key;
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+    root /var/www/deep-space-objects/public;
 
-   location / {
+    ## CONF
+    location / {
         try_files $uri /index.php$is_args$args;
-
-#        proxy_pass http://127.0.0.1:80;
-#        proxy_set_header X-Real-IP  $remote_addr;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        proxy_set_header X-Forwarded-Proto https;
-#        proxy_set_header X-Forwarded-Port 443;
-#        proxy_set_header Host $host;
-   }
+    }
 
     location ~ ^/(index)\.php(/|$) {
-        #fastcgi_pass php:9000;
         fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
+
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+
         internal;
     }
 
-    error_log /var/log/nginx/project_error.log;
-    access_log /var/log/nginx/project_access.log;
+    location ~ \.php$ {
+        return 404;
+    }
+
+    ## Certificates
+    #ssl_certificate /etc/nginx/ssl/domain/cert.pem;
+    #ssl_certificate_key /etc/nginx/ssl/domain/key.pem;
+    #ssl_trusted_certificate /chemin/vers/chain.pem;
+
+    ## Protocol
+    #ssl_protocols TLSv1.2;
+
+    ## Diffie-Hellman
+    #ssl_ecdh_curve secp384r1;
+
+    ## Ciphers
+    #ssl_ciphers EECDH+CHACHA20:EECDH+AESGCM:EECDH+AES;
+    #ssl_prefer_server_ciphers on;
+
+    # OCSP Stapling
+    #resolver 80.67.169.12 80.67.169.40 valid=300s;
+    #resolver_timeout 5s;
+    #ssl_stapling on;
+    #ssl_stapling_verify on;
+
+    ## TLS parameters
+    #ssl_session_cache shared:SSL:10m;
+    #ssl_session_timeout 5m;
+    #ssl_session_tickets off;
+
+    ## HSTS
+    #add_header Strict-Transport-Security "max-age=15552000; includeSubdomains; preload";
 }
